Added device type functionality
